fix: Fix issue with images not appearing on Safari

--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -21,8 +21,7 @@
         '.......... .......... .......... .......... .......... ..........';
 }
 
-@supports (background-image: image-set(url(''))) or
-    (background-image: -webkit-image-set(url(''))) {
+@supports (background-image: -webkit-image-set(url(''))) {
     .header {
         background-image: linear-gradient(
                 to right bottom,
@@ -31,6 +30,20 @@
             ),
             -webkit-image-set(url('../../images/tiles-sm_1x.jpg') 1x, url('../../images/tiles-sm_2x.jpg')
                         2x);
+    }
+}
+
+@supports (background-image: image-set(url(''))) {
+    .header {
+        background-image: linear-gradient(
+                to right bottom,
+                var(--color-primary-dark-transparent),
+                var(--white-primary-transparent)
+            ),
+            image-set(
+                url('../../images/tiles-sm_1x.jpg') 1x,
+                url('../../images/tiles-sm_2x.jpg') 2x
+            );
     }
 }
 
@@ -130,8 +143,7 @@
             url('../../images/tiles-md_1x.jpg');
     }
 
-    @supports (background-image: image-set(url(''))) or
-        (background-image: -webkit-image-set(url(''))) {
+    @supports (background-image: -webkit-image-set(url(''))) {
         .header {
             background-image: linear-gradient(
                     to right bottom,
@@ -140,6 +152,20 @@
                 ),
                 -webkit-image-set(url('../../images/tiles-md_1x.jpg') 1x, url('../../images/tiles-md_2x.jpg')
                             2x);
+        }
+    }
+
+    @supports (background-image: image-set(url(''))) {
+        .header {
+            background-image: linear-gradient(
+                    to right bottom,
+                    var(--color-primary-dark-transparent),
+                    var(--white-primary-transparent)
+                ),
+                image-set(
+                    url('../../images/tiles-md_1x.jpg') 1x,
+                    url('../../images/tiles-md_2x.jpg') 2x
+                );
         }
     }
 
@@ -163,8 +189,7 @@
             url('../../images/tiles-lg_1x.jpg');
     }
 
-    @supports (background-image: image-set(url(''))) or
-        (background-image: -webkit-image-set(url(''))) {
+    @supports (background-image: -webkit-image-set(url(''))) {
         .header {
             background-image: linear-gradient(
                     to right bottom,
@@ -173,6 +198,20 @@
                 ),
                 -webkit-image-set(url('../../images/tiles-lg_1x.jpg') 1x, url('../../images/tiles-lg_2x.jpg')
                             2x);
+        }
+    }
+
+    @supports (background-image: image-set(url(''))) {
+        .header {
+            background-image: linear-gradient(
+                    to right bottom,
+                    var(--color-primary-dark-transparent),
+                    var(--white-primary-transparent)
+                ),
+                image-set(
+                    url('../../images/tiles-lg_1x.jpg') 1x,
+                    url('../../images/tiles-lg_2x.jpg') 2x
+                );
         }
     }
 }
@@ -208,8 +247,7 @@
             url('../../images/tiles-xl_1x.jpg');
     }
 
-    @supports (background-image: image-set(url(''))) or
-        (background-image: -webkit-image-set(url(''))) {
+    @supports (background-image: -webkit-image-set(url(''))) {
         .header {
             background-image: linear-gradient(
                     to right bottom,
@@ -218,6 +256,20 @@
                 ),
                 -webkit-image-set(url('../../images/tiles-xl_1x.jpg') 1x, url('../../images/tiles-xl_2x.jpg')
                             2x);
+        }
+    }
+
+    @supports (background-image: image-set(url(''))) {
+        .header {
+            background-image: linear-gradient(
+                    to right bottom,
+                    var(--color-primary-dark-transparent),
+                    var(--white-primary-transparent)
+                ),
+                image-set(
+                    url('../../images/tiles-xl_1x.jpg') 1x,
+                    url('../../images/tiles-xl_2x.jpg') 2x
+                );
         }
     }
 
